// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With session 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-lg navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <span
              class="visually-hidden"
            >
              electronic Babylonian Library (eBL)
            </span>
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <button
            aria-controls="Header-2"
            aria-label="Toggle navigation"
            class="Header__toggle navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-2"
          >
            <div
              class="Header__nav mx-auto navbar-nav"
            >
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/library"
                  href="/library"
                >
                  Library
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link active"
                  data-rr-ui-event-key="/corpus"
                  href="/corpus"
                >
                  Corpus
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/about"
                  href="/about"
                >
                  About
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/tools"
                  href="/tools"
                >
                  Tools
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/projects"
                  href="/projects"
                >
                  Projects
                </a>
              </div>
            </div>
            <div
              class="Header__right"
            >
              <div
                class="Header__partner-logos"
              >
                <a
                  class="Header__partner-logo-link"
                  href="https://www.lmu.de"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="Ludwig-Maximilians-Universitat Munchen"
                    class="Header__lmu-logo"
                    src="LMU_Logo.svg"
                  />
                </a>
                <span
                  aria-hidden="true"
                  class="Header__logo-divider"
                />
                <a
                  class="Header__partner-logo-link"
                  href="https://badw.de/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="Bayerische Akademie der Wissenschaften"
                    class="Header__badw-logo"
                    src="BAdW_Logo.svg"
                  />
                </a>
              </div>
              <div
                class="Header__user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Corpus
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Corpus
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Corpus container-fluid"
        >
          <div
            class="Corpus__layout row"
          >
            <div
              class="col-md-7"
            >
              <div
                class="Corpus__tabs"
              >
                <div
                  class="Corpus__tabs-header"
                >
                  <a
                    aria-label="Learn more about Corpus"
                    class="AboutInlineLink Corpus__about-link"
                    href="/about/corpus"
                    title="Learn more about Corpus"
                  >
                    <i
                      aria-hidden="true"
                      class="fas fa-info-circle"
                    />
                    <span
                      class="visually-hidden"
                    >
                      Learn more about Corpus
                    </span>
                  </a>
                </div>
                <ul
                  class="nav nav-tabs"
                  id="CorpusTab"
                  role="tablist"
                >
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-L"
                      aria-selected="true"
                      class="nav-link active"
                      data-rr-ui-event-key="L"
                      id="CorpusTab-tab-L"
                      role="tab"
                      type="button"
                    >
                      Literature
                    </button>
                  </li>
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-D"
                      aria-selected="false"
                      class="nav-link"
                      data-rr-ui-event-key="D"
                      id="CorpusTab-tab-D"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      Divination
                    </button>
                  </li>
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-Med"
                      aria-selected="false"
                      class="nav-link"
                      data-rr-ui-event-key="Med"
                      id="CorpusTab-tab-Med"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      Medicine
                    </button>
                  </li>
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-Mag"
                      aria-selected="false"
                      class="nav-link"
                      data-rr-ui-event-key="Mag"
                      id="CorpusTab-tab-Mag"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      Magic
                    </button>
                  </li>
                </ul>
                <div
                  class="tab-content"
                >
                  <div
                    aria-labelledby="CorpusTab-tab-L"
                    class="fade tab-pane active show"
                    id="CorpusTab-tabpane-L"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Narrative Poetry
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/1/1"
                            >
                              1
                              . 
                              First Category 1
                            </a>
                             
                            — 
                            99
                             vv.
                          </div>
                        </li>
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/1/2"
                            >
                              2
                              . 
                              First Category 2
                            </a>
                             
                            — 
                            99
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        II. Monologue and dialogue literature
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/2/1"
                            >
                              1
                              . 
                              Second Category
                            </a>
                             
                            — 
                            2
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        III. Literary Hymns and Prayers
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/3/1"
                            >
                              1
                              . 
                              Third Category
                            </a>
                             
                            — 
                            ±
                            45
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                  </div>
                  <div
                    aria-labelledby="CorpusTab-tab-D"
                    class="fade tab-pane"
                    id="CorpusTab-tabpane-D"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Celestial Divination (
                        <em>
                          Enūma Anu Enlil
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        II. Terrestrial Divination (
                        <em>
                          Šumma ālu
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        III. Extispicy (
                        <em>
                          Bārûtu
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/D/3/1"
                            >
                              1
                              . 
                              Divination Third Category
                            </a>
                             
                            — 
                            ±
                            674
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                  </div>
                  <div
                    aria-labelledby="CorpusTab-tab-Med"
                    class="fade tab-pane"
                    id="CorpusTab-tabpane-Med"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Nineveh Medical Encyclopaedia
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/Med/1/1"
                            >
                              1
                              . 
                              Medicine First Category
                            </a>
                             
                            — 
                            3
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                  </div>
                  <div
                    aria-labelledby="CorpusTab-tab-Mag"
                    class="fade tab-pane"
                    id="CorpusTab-tabpane-Mag"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Anti-witchcraft
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        II. “Hand-lifting” Prayers (
                        <em>
                          šuʾilas
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Corpus__image-col col-md-5"
            >
              <img
                alt="LibraryCropped.svg"
                class="img-fluid"
                src="http://example.com/images/LibraryCropped.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <div
        class="container"
      >
        <div
          class="main-footer__content row"
        >
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              About eBL
            </h6>
            <ul
              class="main-footer__links"
            >
              <li>
                <a
                  href="/about"
                >
                  About
                </a>
              </li>
              <li>
                <a
                  href="/projects"
                >
                  Research Projects
                </a>
              </li>
              <li>
                <a
                  href="https://caic.badw.de"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  CAIC
                </a>
              </li>
            </ul>
          </div>
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              Resources
            </h6>
            <ul
              class="main-footer__links"
            >
              <li>
                <a
                  href="/reference-library/signs"
                >
                  Signs
                </a>
              </li>
              <li>
                <a
                  href="/reference-library/dictionary"
                >
                  Dictionary
                </a>
              </li>
              <li>
                <a
                  href="/reference-library/bibliography"
                >
                  Bibliography
                </a>
              </li>
            </ul>
          </div>
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              Legal
            </h6>
            <ul
              class="main-footer__links"
            >
              <li>
                <a
                  href="/impressum"
                >
                  Impressum
                </a>
              </li>
              <li>
                <a
                  href="/datenschutz"
                >
                  Datenschutz
                </a>
              </li>
            </ul>
          </div>
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              Connect
            </h6>
            <div
              class="main-footer__social"
            >
              <a
                class="main-footer__social-link"
                href="https://twitter.com/ebl_info"
                rel="noopener noreferrer"
                target="_blank"
                title="eBL on X (Twitter)"
              >
                <svg
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
                    fill="currentColor"
                  />
                </svg>
              </a>
              <a
                class="main-footer__social-link"
                href="https://www.facebook.com/profile.php?id=61556323986355"
                rel="noopener noreferrer"
                target="_blank"
                title="CAIC on Facebook"
              >
                <svg
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="main-footer__bottom row"
        >
          <div
            class="col"
          >
            <div
              class="main-footer__partners"
            >
              <a
                class="main-footer__partner-link"
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Bayerische Akademie der Wissenschaften"
              >
                BAdW
              </a>
              <span
                class="main-footer__separator"
              >
                ·
              </span>
              <a
                class="main-footer__partner-link"
                href="https://www.lmu.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Ludwig-Maximilians-Universität München"
              >
                LMU
              </a>
              <span
                class="main-footer__separator"
              >
                ·
              </span>
              <a
                class="main-footer__partner-link"
                href="https://www.lrz.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Leibniz-Rechenzentrum"
              >
                LRZ
              </a>
              <span
                class="main-footer__separator"
              >
                ·
              </span>
              <a
                class="main-footer__partner-link"
                href="https://www.humboldt-foundation.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Alexander von Humboldt Stiftung"
              >
                AvH
              </a>
            </div>
          </div>
        </div>
        <div
          class="main-footer__copyright row"
        >
          <div
            class="col"
          >
            <p>
              © 
              2026
               electronic Babylonian Library
            </p>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Without session 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-lg navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <span
              class="visually-hidden"
            >
              electronic Babylonian Library (eBL)
            </span>
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <button
            aria-controls="Header-6"
            aria-label="Toggle navigation"
            class="Header__toggle navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-6"
          >
            <div
              class="Header__nav mx-auto navbar-nav"
            >
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/library"
                  href="/library"
                >
                  Library
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link active"
                  data-rr-ui-event-key="/corpus"
                  href="/corpus"
                >
                  Corpus
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/about"
                  href="/about"
                >
                  About
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/tools"
                  href="/tools"
                >
                  Tools
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="/projects"
                  href="/projects"
                >
                  Projects
                </a>
              </div>
            </div>
            <div
              class="Header__right"
            >
              <div
                class="Header__partner-logos"
              >
                <a
                  class="Header__partner-logo-link"
                  href="https://www.lmu.de"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="Ludwig-Maximilians-Universitat Munchen"
                    class="Header__lmu-logo"
                    src="LMU_Logo.svg"
                  />
                </a>
                <span
                  aria-hidden="true"
                  class="Header__logo-divider"
                />
                <a
                  class="Header__partner-logo-link"
                  href="https://badw.de/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="Bayerische Akademie der Wissenschaften"
                    class="Header__badw-logo"
                    src="BAdW_Logo.svg"
                  />
                </a>
              </div>
              <div
                class="Header__user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Login
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Corpus
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Corpus
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Corpus container-fluid"
        >
          <div
            class="Corpus__layout row"
          >
            <div
              class="col-md-7"
            >
              <div
                class="Corpus__tabs"
              >
                <div
                  class="Corpus__tabs-header"
                >
                  <a
                    aria-label="Learn more about Corpus"
                    class="AboutInlineLink Corpus__about-link"
                    href="/about/corpus"
                    title="Learn more about Corpus"
                  >
                    <i
                      aria-hidden="true"
                      class="fas fa-info-circle"
                    />
                    <span
                      class="visually-hidden"
                    >
                      Learn more about Corpus
                    </span>
                  </a>
                </div>
                <ul
                  class="nav nav-tabs"
                  id="CorpusTab"
                  role="tablist"
                >
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-L"
                      aria-selected="true"
                      class="nav-link active"
                      data-rr-ui-event-key="L"
                      id="CorpusTab-tab-L"
                      role="tab"
                      type="button"
                    >
                      Literature
                    </button>
                  </li>
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-D"
                      aria-selected="false"
                      class="nav-link"
                      data-rr-ui-event-key="D"
                      id="CorpusTab-tab-D"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      Divination
                    </button>
                  </li>
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-Med"
                      aria-selected="false"
                      class="nav-link"
                      data-rr-ui-event-key="Med"
                      id="CorpusTab-tab-Med"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      Medicine
                    </button>
                  </li>
                  <li
                    class="nav-item"
                    role="presentation"
                  >
                    <button
                      aria-controls="CorpusTab-tabpane-Mag"
                      aria-selected="false"
                      class="nav-link"
                      data-rr-ui-event-key="Mag"
                      id="CorpusTab-tab-Mag"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      Magic
                    </button>
                  </li>
                </ul>
                <div
                  class="tab-content"
                >
                  <div
                    aria-labelledby="CorpusTab-tab-L"
                    class="fade tab-pane active show"
                    id="CorpusTab-tabpane-L"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Narrative Poetry
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/1/1"
                            >
                              1
                              . 
                              First Category 1
                            </a>
                             
                            — 
                            99
                             vv.
                          </div>
                        </li>
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/1/2"
                            >
                              2
                              . 
                              First Category 2
                            </a>
                             
                            — 
                            99
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        II. Monologue and dialogue literature
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/2/1"
                            >
                              1
                              . 
                              Second Category
                            </a>
                             
                            — 
                            2
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        III. Literary Hymns and Prayers
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/L/3/1"
                            >
                              1
                              . 
                              Third Category
                            </a>
                             
                            — 
                            ±
                            45
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                  </div>
                  <div
                    aria-labelledby="CorpusTab-tab-D"
                    class="fade tab-pane"
                    id="CorpusTab-tabpane-D"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Celestial Divination (
                        <em>
                          Enūma Anu Enlil
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        II. Terrestrial Divination (
                        <em>
                          Šumma ālu
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        III. Extispicy (
                        <em>
                          Bārûtu
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/D/3/1"
                            >
                              1
                              . 
                              Divination Third Category
                            </a>
                             
                            — 
                            ±
                            674
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                  </div>
                  <div
                    aria-labelledby="CorpusTab-tab-Med"
                    class="fade tab-pane"
                    id="CorpusTab-tabpane-Med"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Nineveh Medical Encyclopaedia
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      >
                        <li
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <a
                              href="/corpus/Med/1/1"
                            >
                              1
                              . 
                              Medicine First Category
                            </a>
                             
                            — 
                            3
                             vv.
                          </div>
                        </li>
                      </ol>
                    </section>
                  </div>
                  <div
                    aria-labelledby="CorpusTab-tab-Mag"
                    class="fade tab-pane"
                    id="CorpusTab-tabpane-Mag"
                    role="tabpanel"
                  >
                    <section
                      class="Corpus__category"
                    >
                      <h3 />
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        I. Anti-witchcraft
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                    <section
                      class="Corpus__category"
                    >
                      <h3>
                        II. “Hand-lifting” Prayers (
                        <em>
                          šuʾilas
                        </em>
                        )
                      </h3>
                      <ol
                        class="Corpus__text-list container-fluid"
                      />
                    </section>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Corpus__image-col col-md-5"
            >
              <img
                alt="LibraryCropped.svg"
                class="img-fluid"
                src="http://example.com/images/LibraryCropped.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <div
        class="container"
      >
        <div
          class="main-footer__content row"
        >
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              About eBL
            </h6>
            <ul
              class="main-footer__links"
            >
              <li>
                <a
                  href="/about"
                >
                  About
                </a>
              </li>
              <li>
                <a
                  href="/projects"
                >
                  Research Projects
                </a>
              </li>
              <li>
                <a
                  href="https://caic.badw.de"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  CAIC
                </a>
              </li>
            </ul>
          </div>
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              Resources
            </h6>
            <ul
              class="main-footer__links"
            >
              <li>
                <a
                  href="/reference-library/signs"
                >
                  Signs
                </a>
              </li>
              <li>
                <a
                  href="/reference-library/dictionary"
                >
                  Dictionary
                </a>
              </li>
              <li>
                <a
                  href="/reference-library/bibliography"
                >
                  Bibliography
                </a>
              </li>
            </ul>
          </div>
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              Legal
            </h6>
            <ul
              class="main-footer__links"
            >
              <li>
                <a
                  href="/impressum"
                >
                  Impressum
                </a>
              </li>
              <li>
                <a
                  href="/datenschutz"
                >
                  Datenschutz
                </a>
              </li>
            </ul>
          </div>
          <div
            class="main-footer__section col-md-3"
          >
            <h6
              class="main-footer__title"
            >
              Connect
            </h6>
            <div
              class="main-footer__social"
            >
              <a
                class="main-footer__social-link"
                href="https://twitter.com/ebl_info"
                rel="noopener noreferrer"
                target="_blank"
                title="eBL on X (Twitter)"
              >
                <svg
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
                    fill="currentColor"
                  />
                </svg>
              </a>
              <a
                class="main-footer__social-link"
                href="https://www.facebook.com/profile.php?id=61556323986355"
                rel="noopener noreferrer"
                target="_blank"
                title="CAIC on Facebook"
              >
                <svg
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="main-footer__bottom row"
        >
          <div
            class="col"
          >
            <div
              class="main-footer__partners"
            >
              <a
                class="main-footer__partner-link"
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Bayerische Akademie der Wissenschaften"
              >
                BAdW
              </a>
              <span
                class="main-footer__separator"
              >
                ·
              </span>
              <a
                class="main-footer__partner-link"
                href="https://www.lmu.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Ludwig-Maximilians-Universität München"
              >
                LMU
              </a>
              <span
                class="main-footer__separator"
              >
                ·
              </span>
              <a
                class="main-footer__partner-link"
                href="https://www.lrz.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Leibniz-Rechenzentrum"
              >
                LRZ
              </a>
              <span
                class="main-footer__separator"
              >
                ·
              </span>
              <a
                class="main-footer__partner-link"
                href="https://www.humboldt-foundation.de/"
                rel="noopener noreferrer"
                target="_blank"
                title="Alexander von Humboldt Stiftung"
              >
                AvH
              </a>
            </div>
          </div>
        </div>
        <div
          class="main-footer__copyright row"
        >
          <div
            class="col"
          >
            <p>
              © 
              2026
               electronic Babylonian Library
            </p>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
